--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Championships/ShowChampionship.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Championships/ShowChampionship.razor
@@ -46,7 +46,7 @@
 
                 <br/>
                 <br/>
-                <h4>Championships finished</h4>
+                <h4>Tournament finished</h4>
                 @foreach (var tournament in CurrentChampionship.Tournaments.Where(c => c.IsFinished))
                 {
                     <div>
