--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/ShowTournament.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/ShowTournament.razor
@@ -79,7 +79,7 @@
     private Tournament Tournament;
 
 
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
         Tournament = TournamentService.GetById(TournamentId);
     }
