--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/ShowTournamentAgaintsEverybody.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Tournaments/ShowTournamentAgaintsEverybody.razor
@@ -68,7 +68,7 @@
 
     private Game SelectedGame = null;
 
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
         Games = GameService
             .GetByTournamentIdWithIncludes(TournamentId);
