--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Components/EditSkill.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Components/EditSkill.razor
@@ -28,7 +28,7 @@ else
     public Skill Skill { get; set; }
 
     [Parameter]
-    public Action OnRemove { get; set; }
+    public Func<Task> OnRemove { get; set; }
 
     private bool _editableState = false;
 
@@ -37,9 +37,9 @@ else
         _editableState = true;
     }
 
-    private void HandleValidSubmit()
+    private async Task HandleValidSubmit()
     {
-        SkillService.Edit(Skill);
+        await SkillService.Edit(Skill);
         _editableState = false;
     }
 }
