--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Teams/Teams.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Teams/Teams.razor
@@ -53,10 +53,10 @@
         AllTeams = OrganizerService.GetTeamsByName(organizerName);
     }
 
-    private void RemoveTeam(Team team)
+    private async Task RemoveTeam(Team team)
     {
         AllTeams.Remove(team);
-        TeamService.Delete(team);
+        await TeamService.Delete(team);
         StateHasChanged();
     }
 
