Tournament reload when competitors changed + back button

--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Championships/ShowChampionship.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Championships/ShowChampionship.razor
@@ -20,6 +20,13 @@
                 <p>Championship to host tournaments</p>
                 <br/>
                 <div style="font-size: large">
+                            <a href="/Championships">
+                            <button class="oi oi-arrow-left" style="font-size: large;width: 250px">
+                                <span style="padding-left: 10px">Back</span>
+                            </button>
+                            </a>
+                        </div>
+                <div style="font-size: large">
                     <button class="oi oi-plus" style="font-size: large;width: 250px" @onclick="@(() => SelectTournament(null))">
                         <span style="padding-left: 10px">Add new tournament</span>
                     </button>
