--- a/ChampionshipManager/ChampionshipManager.Web/Pages/Settings.razor
+++ b/ChampionshipManager/ChampionshipManager.Web/Pages/Settings.razor
@@ -17,10 +17,18 @@
                 <h2>Competitors properties</h2>
                 <p>Properties that you care about in tournaments</p>
                 <br/>
-                <h4 style="padding: 5px"><input name="birth" type="checkbox" style="height: 30px" checked="@_organizer.BirthEnabled" @onclick="ChangeBirthEnabled"/><span style="padding-left: 10px">Enable birth date</span></h4><br/>
-                <h4 style="padding: 5px"><input name="gender" type="checkbox" checked="@_organizer.GenderEnabled" @onclick="ChangeGenderEnabled"/><span style="padding-left: 10px">Enable gender</span></h4><br/>
-                <h4 style="padding: 5px"><input name="skills" type="checkbox" checked="@_organizer.SkillsEnabled" @onclick="ChangeSkillEnabled"/><span style="padding-left: 10px">Enable skills</span></h4><br/>
-                <h4 style="padding: 5px"><input name="skills" type="checkbox" checked="@_organizer.TeamsEnabled" @onclick="ChangeTeamEnabled"/><span style="padding-left: 10px">Enable teams</span></h4><br/>
+                <h4 style="padding: 5px">
+                    <input name="birth" type="checkbox" style="height: 30px" checked="@_organizer.BirthEnabled" @onclick="ChangeBirthEnabled"/><span style="padding-left: 10px">Enable birth date</span>
+                </h4><br/>
+                <h4 style="padding: 5px">
+                    <input name="gender" type="checkbox" checked="@_organizer.GenderEnabled" @onclick="ChangeGenderEnabled"/><span style="padding-left: 10px">Enable gender</span>
+                </h4><br/>
+                <h4 style="padding: 5px">
+                    <input name="skills" type="checkbox" checked="@_organizer.SkillsEnabled" @onclick="ChangeSkillEnabled"/><span style="padding-left: 10px">Enable skills</span>
+                </h4><br/>
+                <h4 style="padding: 5px">
+                    <input name="skills" type="checkbox" checked="@_organizer.TeamsEnabled" @onclick="ChangeTeamEnabled"/><span style="padding-left: 10px">Enable teams</span>
+                </h4><br/>
             </span>
             <span class="responsiveColumn second">
                 <div style="@_teamsDisplay">
